# test_pr2_guide

./: CMakeLists.txt  package.xml  requirements.txt
apps/: app.installed
apps/pr2-guide/: pr2-guide.app  pr2-guide.xml
apps/pr2_guide/: pr2_guide.app  pr2_guide.xml
config/: hoge.pkl  spotserver.pickle
credentials/: readme.txt
euslisp/: go-to-spot.l  node-go-to-spot.l  status-based-motion-server.l
launch/: pr2_guide.launch
meshes/: pin_marker.stl
msg/: Spot.msg  SpotArray.msg
msg/Spot/: Spot.msg
scripts/: InteractionModule.py  NodeInteractionModule.py  NodeSpotServer.py  NodeStatusManager.py  SpotServer.py  StatusBasedActionServer.py  pr2guide.py  spotserver.py
srv/: GoToSpotStart.srv  SpotManagerDelete.srv  SpotManagerGet.srv  SpotServer_AddSpot.srv  SpotServer_DeleteSpot.srv  SpotServer_GetSpots.srv  SpotServer_SaveFile.srv  StatusManagerSetStatus.srv
srv/GoToSpot/: GoToSpotService.srv  GoToSpotServiceStart.srv  GoToSpotServiceStop.srv
srv/InteractionModuleServer/: InteractionModuleServer_SetStatus.srv  InteractionModuleServer_UpdateStatus.srv
srv/SpotServer/: SpotServer_AddSpot.srv  SpotServer_DeleteSpot.srv  SpotServer_GetSpots.srv  SpotServer_SaveFile.srv
srv/StatusBasedActionServer/: StatusBasedActionServer_GetStatus.srv  StatusBasedActionServer_SetStatus.srv
srv/StatusBasedMotionServer/: StatusBasedMotionServer_SetStatus.srv
srv/StatusManagerService/: StatusManagerService_SetStatus.srv
yaml/: spots.yaml  test-map-withpos.yaml  test-map.yaml
