<?xml version="1.0"?>
<package format="2">
  <name>pr2_guide</name>
  <version>0.0.0</version>
  <description>The pr2-guide package</description>

  <maintainer email="sktometometo@todo.todo">sktometometo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_generation</exec_depend>

  <export>

  </export>
</package>
